--- a/references.bib
+++ b/references.bib
@@ -1842,3 +1842,36 @@ doi = {10.1201/9781420072884-c30}
   publisher={Springer}
 }
 
+@misc{tmbdocumentation,
+  title = {The comprehensive TMB documentation},
+  author = {Kristensen, Kasper},
+  year = {2021},
+  howpublished = {\url{https://kaskr.github.io/adcomp/_book/Introduction.html}},
+  note = {Accessed: June 2, 2023}
+}
+
+@misc{cppaddocumentation,
+  title = {CppAD: a package for C++ algorithmic differentiation},
+  author = {Bell, Bradley},
+  year = {2023},
+  howpublished = {\url{http://www.coin-or.org/CppAD}},
+  note = {Accessed: September 25, 2023}
+}
+
+@article{brooks2017glmmtmb,
+  title={glmmTMB balances speed and flexibility among packages for zero-inflated generalized linear mixed modeling},
+  author={Brooks, Mollie E and Kristensen, Kasper and Van Benthem, Koen J and Magnusson, Arni and Berg, Casper W and Nielsen, Anders and Skaug, Hans J and Machler, Martin and Bolker, Benjamin M},
+  journal={The R journal},
+  volume={9},
+  number={2},
+  pages={378--400},
+  year={2017},
+  publisher={Technische Universitaet Wien}
+}
+
+@article{vstrumbelj2023past,
+  title={Past, Present, and Future of Software for Bayesian Inference},
+  author={{\v{S}}trumbelj, Erik and Bouchard-C{\^o}t{\'e}, Alexandre and Corander, Jukka and Gelman, Andrew and Rue, H{\aa}vard and Murray, Lawrence and Pesonen, Henri and Plummer, Martyn and Vehtari, Aki},
+  year={2023}
+}
+
